# paper-reading-experiments-gpt-4o

./: .gitignore  check_outperform_gpt_4o.py  common.py  compute_tokens_with_pypdf.py  gather_reference_with_image.py  gather_reference_with_pypdf.py  pyproject.toml  summary_pdf_pages.py
